--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32s3box]
+[env:esp32-s3-devkitc-1]
 platform = espressif32
-board = esp32s3box
+board = esp32-s3-devkitc-1
 framework = arduino
+monitor_speed = 115200
+build_flags = 
+	-D ARDUINO_USB_MODE=1
+	-D ARDUINO_USB_CDC_ON_BOOT=1
+lib_deps = ottowinter/ESPAsyncWebServer-esphome@^3.0.0
