--- a/platformio.ini
+++ b/platformio.ini
@@ -16,4 +16,6 @@ monitor_speed = 115200
 build_flags = 
 	-D ARDUINO_USB_MODE=1
 	-D ARDUINO_USB_CDC_ON_BOOT=1
-lib_deps = ottowinter/ESPAsyncWebServer-esphome@^3.0.0
+lib_deps = 
+	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
+	bblanchon/ArduinoJson@^6.20.1
