--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32-s3-devkitc-1]
+[env:esp32dev]
 platform = espressif32
-board = esp32-s3-devkitc-1
+board = esp32dev
 framework = arduino
 monitor_speed = 115200
 ;build_flags = 
@@ -18,4 +18,4 @@ monitor_speed = 115200
 ;	-D ARDUINO_USB_CDC_ON_BOOT=1
 lib_deps = 
 	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
-	bblanchon/ArduinoJson@^6.20.1
+	bblanchon/ArduinoJson@^6.19.4
