change chartist so you can make points not only on axis

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,9 +13,12 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-;build_flags = 
-;	-D ARDUINO_USB_MODE=1
-;	-D ARDUINO_USB_CDC_ON_BOOT=1
 lib_deps = 
 	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
 	bblanchon/ArduinoJson@^6.19.4
+	adafruit/Adafruit MAX1704X@^1.0.0
+	sparkfun/SparkFun Qwiic GPIO TCA9534 Arduino Library@^1.0.0
+	https://github.com/hwstar/MCP4726
+	adafruit/Adafruit BusIO@^1.14.1
+	Wire
+	SPI
